# miniagents

./: .gitignore  LICENSE  README.md  examples.py  pyproject.toml
src/miniagents/: __init__.py  agent.py  chat_client.py  crew.py  exceptions.py  log.py  react_agent.py  task.py  tool.py  tracing.py  utils.py
tests/: conftest.py  test_agent_task_crew.py  test_chat_client_and_logging.py  test_react_agent.py  test_tool.py  test_tracing.py  test_utils.py
