[project]
name = "miniagents"
version = "0.2.0"
description = "A minimal multi-agent LLM framework: ReAct agents with tools, composed into a task dependency DAG."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "groq>=0.24.0",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
viz = [
    "graphviz>=0.20.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/miniagents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
